pkg/main/default/objects/BulkStatus__c/BulkStatus__c.object-meta.xml
<CustomObject>
    <description>DocuSign Bulk Send Status</description>
    <label>DocuSign Bulk Send Status</label>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Bulk Send Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>