pkg/main/default/objects/BulkStatus__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <label>Batch size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>