pkg/main/default/objects/BulkStatus__c/fields/FailedEnvelopes__c.field-meta.xml
<CustomField>
    <fullName>FailedEnvelopes__c</fullName>
    <label>Failed envelopes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>