pkg/main/default/objects/BulkStatus__c/fields/QueuedEnvelopes__c.field-meta.xml
<CustomField>
    <fullName>QueuedEnvelopes__c</fullName>
    <label>Queued envelopes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>