pkg/main/default/objects/BulkStatus__c/fields/SentEnvelopes__c.field-meta.xml
<CustomField>
    <fullName>SentEnvelopes__c</fullName>
    <label>Sent envelopes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>