pkg/main/default/objects/BulkStatus__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <label>Salesforce source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>